--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-leaflet": "^5.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "tslib": "^2.8.1",
     "zod": "^4.0.10"
   },
   "devDependencies": {
