update name and port of app

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "my-app",
+  "name": "ckfishmar.com",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "cross-env PORT=5030 next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -52,6 +52,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-google-recaptcha": "^2.1.9",
+    "cross-env": "^10.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
     "tailwindcss": "^4",
